--- a/SqlStressTester.ViewModels/SqlStressTester.ViewModels.csproj
+++ b/SqlStressTester.ViewModels/SqlStressTester.ViewModels.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AdonisUI" Version="1.17.0" />
+    <PackageReference Include="LiveCharts.Wpf.NetCore3" Version="0.9.7" />
     <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.0.2" />
     <PackageReference Include="MvvmDialogs" Version="8.0.0" />
   </ItemGroup>
